--- a/docs.html
+++ b/docs.html
@@ -155,25 +155,26 @@
         <!-- Getting Started
 		============================ -->
         <section id="idocs_start">
-        <h1>Documentation</h1>
+        <h1>PRTGN Wiki & Documentation</h1>
         <h2>Your ThemeForest Item Name Here</h2>
-        <p class="lead">Thank you so much for purchasing our item from themeforest.</p>
+        <p class="lead">Thank you for looking into / using PRTGN! Every user helps. There more that know, the better!</p>
 		<hr>
 		<div class="row">
 			<div class="col-sm-6 col-lg-4">
 				<ul class="list-unstyled">
 					<li><strong>Version:</strong> 1.0</li>
-					<li><strong>Author:</strong> <a href="http://www.harnishdesign.net" target="_blank">Harnish Design</a></li>
-				</ul>
+                    <li><strong>Author:</strong> <a href="https://github.com/PRTGN-Development-Team" target="_blank">PRTGN Development Team</a></li>
+                    <li><strong>Template:</strong> <a href="https://github.com/harnishdesign/iDocs" target="_blank">iDocs</a></li>
+                </ul>
 			</div>
 			<div class="col-sm-6 col-lg-4">
 				<ul class="list-unstyled">
-					<li><strong class="font-weight-700">Created:</strong> 8 April, 2020</li>
-					<li><strong>Update:</strong> 12 May, 2020</li>
+					<li><strong class="font-weight-700">Created:</strong> November 7th 2025</li>
+					<li><strong>Update:</strong> November 7th 2025</li>
 				</ul>
 			</div>
 		</div>
-        <p class="alert alert-info">If you have any questions that are beyond the scope of this help file, Please feel free to email via <a target="_blank" href="https://themeforest.net/user/harnishdesign/#contact?ref=HarnishDesign">Item Support Page</a>.</p>
+        <p class="alert alert-info">If you have any questions that are beyond the scope of this help file, Please feel free to ask via the issues tab in the <a target="_blank" href="https://github.com/PRTGN-Development-Team/.prtgn">Main PRTGN GitHub Repo</a>.</p>
         </section>
         
 		<hr class="divider">
