--- a/docs.html
+++ b/docs.html
@@ -385,9 +385,9 @@
         <section id="idocs_history">
           <h2>History</h2>
           <div>
-              <p>This whole project started after seeing a video from <a href="https://www.youtube.com/@genericpurpleprotogen1">generic purple protogen.</a> That's kina it. I saw a video, thought about making a clippy knock off but as a protogen, and then thought that a suitable file format would be needed for that and now were here. One more file format added to the mix.</p>
+              <p>This whole project started after seeing a video from <a href="https://www.youtube.com/@genericpurpleprotogen1">generic purple protogen.</a> That's kina it. The creator saw a video, thought about making a clippy knock off but as a protogen, and then thought that a suitable file format would be needed for that and now were here. One more file format added to the mix.</p>
 
-              <p>Now, getting into some of the features has some other lore. For instance, .prtgn_wav files were inspired by the music artist <a href="https://youtube.com/@ivycombmusic?si=K92ak8535oQ7ik8r">Ivycomb.</a> I saw a <a href="https://youtube.com/shorts/dQyZ-WTuBwQ?si=PoWy2zuMMxrF3mQX">video</a> about there music release of <a href="https://music.youtube.com/watch?v=U5SjlUnsPZI">Crimson Galaxys</a> and how the character had lore in the protogen species.</p>
+              <p>Now, getting into some of the features has some other lore. For instance, .prtgn_wav files were inspired by the music artist <a href="https://youtube.com/@ivycombmusic?si=K92ak8535oQ7ik8r">Ivycomb.</a> The creator saw a <a href="https://youtube.com/shorts/dQyZ-WTuBwQ?si=PoWy2zuMMxrF3mQX">video</a> about there music release of <a href="https://music.youtube.com/watch?v=U5SjlUnsPZI">Crimson Galaxys</a> and how the character had lore in the protogen species.</p>
           </div>
 
 		<hr class="divider">
