--- a/docs.html
+++ b/docs.html
@@ -398,6 +398,8 @@
           <h2>What is a protogen?</h2>
 		  <p class="lead">This whole project is based on protogens, but what actualy is a protogen? And how do they differ from primagens?</p>
 
+            <h3>Overview / Community Information</h3>
+
             <blockquote cite="https://en.wikifur.com/wiki/Protogen">
                 <p>Created by a species of higher intelligence known only as the "Premogenitors" in a universe known as ZOR (Zenith's Outer Reach), Primagens, and later, Protogens, were created to explore space and perform necessary jobs (such as factory workers, construction workers, etc.) on the planet. Protogens were 40% artificial and 60% biological, whereas Primagens were 60% artificial and 40% biological. A Protogen's typical lifespan is around 500 years, but it can live longer than this if it continues to update its biological and artificial components and internal firmware and operating system.</p>
 
@@ -420,7 +422,25 @@
                 <img src="assets/images/450px-Protogen_And_Primagen_Comparison_Example.jpg" class="img-fluid img-thumbnail" alt="image">
             </a>
 
+            <p>For a video overview, the <a href="https://youtu.be/ueke8W-Q7Xk?si=yxhRktDPQaASfT5r">`Lore of the Protogens`</a> video created by <a href="https://www.youtube.com/@RaealTheProtogen">`Raeal The Protogen`</a> is a good option.</p>
+
             <p><i>Image Credit : <a href="https://coolkoinu.carrd.co">CoolKoinu / Malice-risu</a> Source from : <a href="https://en.wikifur.com/wiki/Protogen">Protogen / Primagen WikiFur</a></i><p>
+
+            <h3>Official Sources</h3>
+
+            <p><a href="https://linktr.ee/ZenithsOuterReach">Zeniths Outer Reach Linktree</a></p>
+
+            <p><a href="https://zoruniverse.info">Zeniths Outer Reach Website</a></p>
+
+            <p><a href="https://discord.gg/zenithsouterreach">Zeniths Outer Reach Discord</a></p>
+
+            <p><a href="https://docs.google.com/document/d/1KLB4TuYxsR2BUCUKtspBPNA0UYtvxRRzsxknRohDCyE/preview?rm=demo&tab=t.0">Protogen Guide</a></p>
+
+            <p><a href="https://docs.google.com/spreadsheets/d/1AdKaTZOdM8Lsufu3bct5rv0Y8kvo7F6jMAo7-KxjALA/edit?gid=1013595769#gid=1013595769">Protogen Trait List</a></p>
+
+
+
+
 
 
             <hr class="divider">
